# TerraX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TerraX.sln  build.sh  rebuild.sh
Base/: Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt  main.cpp
Base/include/: ComDef.h  RingBuffer.h  TaskManager.h  TerraXConfig.h  TimeManager.h  base_guid.hpp  base_iterator.hpp  base_macro.h  base_type.h  dynamic_bitset.hpp  event_dynamic.h  event_dynamic2.h  event_dynamic2.hpp  event_static.h  event_static.hpp  observer.h  observer.hpp  ring_buffer.hpp  timekeeper.h  timer.hpp  timer_task.h
CenterServer/: CMakeLists.txt  CenterPacketProcessor.cpp  CenterPacketProcessor.h  CenterServer.cpp  CenterServer.h  CenterServer.vcxproj  CenterServer.vcxproj.filters  ConnectionManager.cpp  ConnectionManager.h  LoginManager.cpp  LoginManager.h  NetManagerCenter.cpp  NetManagerCenter.h  PacketProcessor_Center.cpp  PacketProcessor_Center.h  ServerManager_Center.cpp  ServerManager_Center.h  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  LocalGuest.h  NetManagerClient.cpp  NetManagerClient.h  main.cpp
ComLib/: CMakeLists.txt  ComLib.vcxproj  ComLib.vcxproj.filters  main.cpp
ComLib/include/: ComDef.h
GameServer/: AchievementComponent.cpp  AchievementComponent.h  Avatar.cpp  Avatar.h  AvatarComponent.cpp  AvatarComponent.h  CoinComponent.cpp  CoinComponent.h  DataSyncComponent.cpp  DataSyncComponent.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  ItemComponent.cpp  ItemComponent.h  MissionComponent.cpp  MissionComponent.h  SkillComponent.cpp  SkillComponent.h  main.cpp
GateServer/: CMakeLists.txt  CltConnectionManager.cpp  CltConnectionManager.h  GateAccount.h  GateAvatar.h  GateLoginManager.cpp  GateLoginManager.h  GatePacketProcessor.cpp  GatePacketProcessor.h  GateServer.cpp  GateServer.h  GateServer.vcxproj  GateServer.vcxproj.filters  Guest.cpp  Guest.h  GuestManager.h  NetManagerGate.cpp  NetManagerGate.h  PacketProcessor_Gate.cpp  PacketProcessor_Gate.h  main.cpp
Lib/: ComLib.lib  SrvLib.lib
LoginServer/: DataDefine.h  DataPool.h  DataPoolConfig.h  FileReader.h  LoginServer.vcxproj  LoginServer.vcxproj.filters  avatar.json  item.json  main.cpp
Net/: CMakeLists.txt  Net.vcxproj  Net.vcxproj.filters  main.cpp
Net/include/: Acceptor.h  CodecLite-inl.h  Connector.h  EventLoop.h  NetChannel.h  NetDefine.h  NetServer.h  Packet.h  PacketDispatcher.h  PacketSender.h  ProtobufCodecLite.h  SocketOpt-inl.h
Net/proto/: client_server.pb.cc  client_server.pb.h  server_packet.pb.cc  server_packet.pb.h  server_server.pb.cc  server_server.pb.h
Net/src/: Acceptor.cpp  Connector.cpp  NetChannel.cpp  NetServer.cpp  Packet.cpp  PacketDispatcher.cpp  ProtobufCodecLite.cpp
SrvLib/: CMakeLists.txt  SrvLib.vcxproj  SrvLib.vcxproj.filters  main.cpp
SrvLib/include/: CodecLite-inl.h  EventLoop.h  IServer.h  PacketDispatcher.h  PacketProcessor.h  RpcChannel.h  RpcServer.h  ServerAddrManager.h  ServerBase.h  ServerManager.h
SrvLib/src/: PacketDispatcher.cpp  PacketProcessor.cpp  RpcChannel.cpp  RpcServer.cpp  ServerAddrManager.cpp  ServerBase.cpp  ServerManager.cpp
TerraX/: TerraX.sln  TerraX.vcxproj  TerraX.vcxproj.filters  main.cpp
TestClient/: CMakeLists.txt  TestClient.cpp  TestClient.h  TestClient.vcxproj  TestClient.vcxproj.filters  main.cpp
TestServer/: CMakeLists.txt  TestServer.cpp  TestServer.h  TestServer.vcxproj  TestServer.vcxproj.filters  main.cpp
TestServr/: TestServr.vcxproj  main.cpp
Tools/DataPoolBuilder/: CppEnumExport.cs  DataPoolBuilder.csproj  DataPoolBuilder.sln  FileSearch.cs  Program.cs
Tools/Excel2json/: Exporter.cs  FileSearch.cs  JsonExporter.cs  Program.Options.cs  Program.cs  README.md  do_covert.bat  excel2json.csproj  packages.config
Tools/jsondata/: avatar.json  item.json
Tools/testdata/: avatar.xlsx  item.xlsx
WorldServer/: CMakeLists.txt  CommonItem.h  CommonItemContainer_T.h  CommonItemDefine.h  CommonItemSet_T.h  CommonOwner.h  DataPool.h  ICommonDataComponent.h  NetManagerWorld.cpp  NetManagerWorld.h  PacketProcessor_World.cpp  PacketProcessor_World.h  WorldServer.cpp  WorldServer.h  WorldServer.vcxproj  WorldServer.vcxproj.filters  main.cpp
lib/base/: CMakeLists.txt  base.vcxproj  dynamic_bitset.cpp  dynamic_bitset.h  event_dynamic.h  event_dynamic2.h  event_static.h  guid.h  macro.h  main.cpp  module_interface.h  observer.h  ringbuffer.h  schedule_task.h  table.h  timekeeper.h  timer.cpp  timer.h  types.h
lib/clt/: clt.vcxproj
lib/comm/: CMakeLists.txt  comm.vcxproj  comm.vcxproj.filters  main.cpp
lib/comm/config/: jsonstream.cpp  jsonstream.h  server_config.cpp  server_config.h
lib/comm/net/: eventloop.h  net_define.h  packet.cpp  packet.h  packet_dispatcher.cpp  packet_dispatcher.h  socketopt-inl.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
lib/comm/proto/: base_type.pb.cc  base_type.pb.h  client_server.pb.cc  client_server.pb.h  server_server.pb.cc  server_server.pb.h
lib/srv/: CMakeLists.txt  main.cpp  srv.vcxproj  srv.vcxproj.filters
lib/srv/net/: net_base_module.cpp  net_base_module.h  packet_processor.cpp  packet_processor.h  server_accept_service.cpp  server_accept_service.h  server_conn_service.cpp  server_conn_service.h  server_login_ack_service.cpp  server_login_ack_service.h  server_login_req_service.cpp  server_login_req_service.h  server_table.cpp  server_table.h
server/gate_server/: CMakeLists.txt  gate_server.vcxproj  gate_server.vcxproj.filters  main.cpp
server/gate_server/gate_server/: gate_net_module.cpp  gate_net_module.h  gate_server.cpp  gate_server.h
server/login_server/: login_server.vcxproj
server/master_server/: master_server.vcxproj
server/node_server/: main.cpp  node_server.vcxproj  (+1 more)
server/world_server/: CMakeLists.txt  main.cpp  world_server.vcxproj  world_server.vcxproj.filters
server/world_server/world_server/: world_net_module.cpp  world_net_module.h  world_server.cpp  world_server.h
(+15 files in other folders)
